# audio-engine

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h
app/src/main/java/com/delicacyset/audioengine/: RecordV2Activity.java
app/src/main/java/com/delicacyset/superpowered/: AudioEngine.java
app/src/main/res/layout/: activity_record_v2.xml
gradle/wrapper/: gradle-wrapper.properties
